Installs chronojump_importer.py in the same directory as chronojump main binary.
Only tested on Linux.

--- a/configure.ac
+++ b/configure.ac
@@ -150,6 +150,7 @@ chronopic-firmware/chronopic-firmwarecord/chronopic-firmwarecord
 chronopic-tests/Makefile
 src/Makefile
 src/Mini/Makefile
+src/chronojump-importer/Makefile
 po/Makefile.in
 chronojump_server/Makefile
 encoder/Makefile
