Installs the chronojump_importer.py correctly. Executes it correctly on Linux.

--- a/src/chronojump-importer/Makefile.am
+++ b/src/chronojump-importer/Makefile.am
@@ -1,6 +1,3 @@
-TARGET = exe
+TARGET = all
 
-chronojump_importerdir = "@bindir@"
-chronojump_importer_DATA = chronojump_importer.py
-
-EXTRA_DIST = $(chronojump_importer_DATA)
+bin_SCRIPTS = chronojump_importer.py
