Adds FTD2XX.dll library on win32 only.
The library is copied to C:\Program Files\Chronojump\bin directory.

--- a/win32/Makefile.am
+++ b/win32/Makefile.am
@@ -1,6 +1,11 @@
 deploy:
 	python deploy_win32.py
 	cp -r deps/* dist/
+	
+	rm dist/FTD2XX_NET_v1.0.14/Readme.chronojump.txt
+	mv dist/FTD2XX_NET_v1.0.14/* dist/bin
+	rmdir dist/FTD2XX_NET_v1.0.14
+
 	python ../encoder/setup-pyserial_pyper_windows.py install
 	python ../encoder/setup-pyserial_pyper_windows.py py2exe -d "dist/bin/encoder"
 	cd ../chronopic-firmware/chronopic-firmwarecord/; python setup.py -d "dist/bin"
