When importing a chronojump database: updates it to the current version before calling the importing code.
Adds a new class: StaticClassState. This class saves all the static
variables of a given class into a dictionary (see its documentation).

Because we have static data for Sqlite class what happens here:
a) it saves Sqlite class data
b) it uses Sqlite class to Convert the importing database to the current
version
c) it restores the Sqlite previous state

Instead of doing this we could avoid having all the static data but this
is a major refactoring that needs to be done in another moment (and
quite a risky refactoring).

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -879,6 +879,7 @@
     <Compile Include="src\chronopicRegister.cs" />
     <Compile Include="src\sqlite\chronopicRegister.cs" />
     <Compile Include="src\chronojumpImporter.cs" />
+    <Compile Include="src\staticClassState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
