--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -883,6 +883,7 @@
     <Compile Include="src\sqlite\chronopicRegister.cs" />
     <Compile Include="src\chronojumpImporter.cs" />
     <Compile Include="src\staticClassState.cs" />
+    <Compile Include="src\executeProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
