--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -54,6 +54,7 @@ src/gui/runType.cs
 src/gui/server.cs
 src/gui/session.cs
 src/gui/stats.cs
+src/executeProcess.cs
 src/json.cs
 src/jumpType.cs
 src/Mini/chronojump_mini.cs
