--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,7 +8,41 @@ CesarPlayer/Gui/CapturerBin.cs
 CesarPlayer/Utils/Device.cs
 CesarPlayer/Utils/MediaFile.cs
 CesarPlayer/Utils/PreviewMediaFile.cs
-glade/chronojump.glade
+glade/app1.glade
+glade/chronopic_window.glade
+glade/chronopic_wizard_win.glade
+glade/confirm_window.glade
+glade/convert_weight.glade
+glade/dialog_calendar.glade
+glade/dialog_help_ports.glade
+glade/dialog_image_test.glade
+glade/dialog_message.glade
+glade/dialog_server_stats.glade
+glade/edit_event.glade
+glade/encoder_configuration.glade
+glade/error_dialog.glade
+glade/error_window.glade
+glade/evaluator_window.glade
+glade/event_graph_configure.glade
+glade/execute_auto.glade
+glade/generic_window.glade
+glade/jump_type_add.glade
+glade/jumps_runs_more.glade
+glade/person_multiple_infinite.glade
+glade/person_recuperate.glade
+glade/person_select_window.glade
+glade/person_show_all_events.glade
+glade/person_win.glade
+glade/preferences_win.glade
+glade/query_server_window.glade
+glade/repair_sub_event.glade
+glade/repetitive_conditions.glade
+glade/report_window.glade
+glade/run_type_add.glade
+glade/session_add_edit.glade
+glade/session_upload.glade
+glade/splash_window.glade
+glade/stats_select_sessions.glade
 libcesarplayer/bacon-video-widget-gst-0.10.c
 libcesarplayer/video-utils.c
 src/chronojump.cs
