Adds LD_LIBRARY_PATH in the Monodevelop project.
Previously this variable had to be set from outside Monodevelop to allow
Chronojump executd from Monodevelop to be ran. Now Monodevelop sets it
so it's not needed to set it from outside.

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -25,6 +25,11 @@
     <LangVersion>4</LangVersion>
     <PlatformTarget>x86</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <EnvironmentVariables>
+      <EnvironmentVariables>
+        <Variable name="LD_LIBRARY_PATH" value="/usr/local/lib/chronojump" />
+      </EnvironmentVariables>
+    </EnvironmentVariables>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
