autogen.sh generates deb-pkg.sh with executable permissions.
Fixes the documentation because we don't need the chmod u+x deb-dpkg.sh
anymore.

--- a/configure.ac
+++ b/configure.ac
@@ -165,7 +165,8 @@ CesarPlayer/AssemblyInfo.cs
 CesarPlayer/CesarPlayer.dll.config
 win32/chronojump_innosetup.iss
 win32/Makefile
-deb-pkg.sh
 ])
+
+AC_CONFIG_FILES([deb-pkg.sh], [chmod +x deb-pkg.sh])
 
 AC_OUTPUT
