libcesarplayer/Makefile generates these two files, they don't need to be in the git repository.
Until now doing a git diff/git status after autogen.sh and before make was showing these files as removed.

Here the rules in the Makefile that generates the files:
baconvideowidget-marshal.h: baconvideowidget-marshal.list
        ( $(GLIB_GENMARSHAL) --prefix=baconvideowidget_marshal $(srcdir)/baconvideowidget-marshal.list --header > baconvideowidget-marshal.h )
baconvideowidget-marshal.c: baconvideowidget-marshal.h
        ( $(GLIB_GENMARSHAL) --prefix=baconvideowidget_marshal $(srcdir)/baconvideowidget-marshal.list --body --header > baconvideowidget-marshal.c )

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,10 @@ src/chronojump
 src/chronojump.desktop
 win32/chronojump_innosetup.iss
 
+# Cesarplayer generates 2 files
+libcesarplayer/baconvideowidget-marshal.c
+libcesarplayer/baconvideowidget-marshal.h
+
 # testing-stuff binaries
 testing-stuff/*.exe
 
