Uses the version from the output of "git describe" instead of hardcoding in configure.ac.
autoconf now executes "git describe" to know which version is going to
build. The version depends on the latest git tag (see howto_new_release.txt).

There are two versions: the AssemblyVersion (which is like 1.6.2, since
it only accepts this format) and the new buildInfo.chronojumpVersion and
buildInfo.chronojumpLastCommitTimestamp (not used at the moment).

The buildInfo.chronojumpVersion is used as display string: it's like
1.6.2 if it's a build from a tag or
1.6.2-number_of_commits_since_last_tag-commit_hash. This way we can
identify the build uniquely even if it was from a specific branch.

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -888,6 +888,7 @@
     <Compile Include="src\executeProcess.cs" />
     <Compile Include="src\gui\cjCombo.cs" />
     <Compile Include="src\sqlite\usefulObjects.cs" />
+    <Compile Include="src\buildInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
@@ -1916,6 +1917,7 @@
     <None Include="images\xcf\chronojump_icon_graph.xcf" />
     <None Include="images\xcf\delete_last.xcf" />
     <None Include="images\xcf\pulses.xcf" />
+    <None Include="src\buildInfo.cs.in" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="src\chronojump.desktop">
