--- a/CesarPlayer/AssemblyInfo.cs.in
+++ b/CesarPlayer/AssemblyInfo.cs.in
@@ -41,7 +41,7 @@ using System.Runtime.CompilerServices;
 // You can specify all values by your own or you can build default build and revision
 // numbers with the '*' character (the default):
 
-[assembly: AssemblyVersion("@PACKAGE_VERSION@")]
+[assembly: AssemblyVersion("@PACKAGE_SIMPLIFIED_VERSION@")]
 
 // The following attributes specify the key for the sign of your assembly. See the
 // .NET Framework documentation for more information about signing.
