Fixes Makefile syntax, makes it specific for OSX. Exports new variable.

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,9 +23,14 @@ ChangeLog:
 
 dist: ChangeLog
 
+if OSTYPE_OS_X
+export CHRONOJUMP_VERSION = @PACKAGE_VERSION@
+export CHRONOJUMP_COMMIT = origin/@GIT_BRANCH@
+CERBERO_COMMAND = /Users/chronojump/cerbero/cerbero-uninstalled -c  /Users/chronojump/cerbero/cerbero-extras/chronojump.cbc
 osx-package:
-	export CHRONOJUMP_VERSION="@PACKAGE_VERSION@"
-	cerbero-cj buildone chronojump
-	cerbero-cj package chronojump
+	$(CERBERO_COMMAND) buildone chronojump
+	$(CERBERO_COMMAND) package chronojump
+endif
+
 
 .PHONY: ChangeLog
