Updates documentation and makes sure that on make osx-package everything has been build.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ if OSTYPE_OS_X
 export CHRONOJUMP_VERSION = @PACKAGE_VERSION@
 export CHRONOJUMP_COMMIT = origin/@GIT_BRANCH@
 CERBERO_COMMAND = /Users/chronojump/cerbero/cerbero-uninstalled -c  /Users/chronojump/cerbero/cerbero-extras/chronojump.cbc
-osx-package:
+osx-package: all installer
 	$(CERBERO_COMMAND) buildone chronojump
 	$(CERBERO_COMMAND) package chronojump
 endif
