--- a/src/buildInfo.cs.in
+++ b/src/buildInfo.cs.in
@@ -6,7 +6,7 @@ public class BuildInfo
 	// chronojumpVersion might be like 1.6.2 if it's from a tagged
 	// version and be the same as UtilAll::ReadVersion() or might be
 	// 1.6.2-276-gd579c89 (see output of git describe)
-	public static string chronojumpVersion= "@BUILD_CHRONOJUMP_VERSION@";
+	public static string chronojumpVersion= "@PACKAGE_VERSION@";
 
 	// It's the timestamp because git log doesn't give anything like
 	// YYYY-MM-DD
