--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -312,6 +312,7 @@ RESOURCES = \
 	../images/auto-by-series.png,auto-by-series.png \
 	../images/auto-person-skip.png,auto-person-skip.png \
 	../images/auto-person-remove.png,auto-person-remove.png \
+	../images/chronopic.png,chronopic.png \
 	../images/chronopic1.jpg,chronopic1.jpg \
 	../images/mini/chronopic1.jpg,mini/chronopic1.jpg \
 	../images/chronopic2.jpg,chronopic2.jpg \
