Adds recently added file in the chronojump.csproj (to be used in Monodevelop)

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -248,6 +248,9 @@
     <EmbeddedResource Include="images\calendar.png">
       <LogicalName>calendar.png</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="images\chronojump-logo-transparent.png">
+      <LogicalName>chronojump-logo-transparent.png</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="images\chronojump-boscosystem.png">
       <LogicalName>chronojump-boscosystem.png</LogicalName>
     </EmbeddedResource>
