New feature: Added rest times after each test

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -154,6 +154,7 @@ SOURCES = \
 	session.cs\
 	exportSession.cs\
 	preferences.cs\
+	restTime.cs\
 	treeViewEvent.cs\
 	treeViewPerson.cs\
 	treeViewJump.cs\
