--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -997,6 +996,7 @@
     <Compile Include="src\gui\cjCombo.cs" />
     <Compile Include="src\sqlite\usefulObjects.cs" />
     <Compile Include="src\buildInfo.cs" />
+    <Compile Include="src\restTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
