Fixes a problem when executing initltool-merge -m in po/ directory.
Since 94d16f332e44e5f83e6a2fbbc2dcc446d6fedd29 when I replaced:
AC_INIT([chronojump], [1.6.2])

with:
AC_INIT([chronojump], [m4_esyscmd_s([git describe --abbrev=0])])

and because initltool-merge doesn't handle m4_esyscmd_s,when executing
inittool-merge -m in po/ the output was:
----
Unmatched ( in regex; marked by <-- HERE in m/^chronojump-m4_esyscmd_s(
<-- HERE echo-n`gitdescribe`/.*$/ at /usr/bin/intltool-update line 320,
<FILE> line 119.
----

In this commit it avoids using m4_esyscmd_s. A bug with a patch for
intltool-merge has been sent as well:
https://bugs.launchpad.net/intltool/+bug/1642931

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,10 @@ AC_PREREQ([2.54])
 
 # PACKAGE_VERSION variable comes from here (e.g. to show it to the user,
 # distribution package names, etc.)
-AC_INIT([chronojump], [m4_esyscmd_s([git describe])])
+
+# We are not using m4_esyscmd_s (then we wouldn't need the echo -n ``) because
+# of a bug in intltool-update. See: https://bugs.launchpad.net/intltool/+bug/1642931
+AC_INIT([chronojump], [m4_esyscmd([echo -n `git describe`])])
 
 # This is used in AssemblyInfo.cs.in: it can only be major.minor.release format
 AC_SUBST([PACKAGE_SIMPLIFIED_VERSION], [m4_esyscmd_s([git describe --abbrev=0])])
