--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -13,6 +13,7 @@ glade/chronopic_window.glade
 glade/chronopic_wizard_win.glade
 glade/confirm_window.glade
 glade/convert_weight.glade
+glade/dialog_about.glade
 glade/dialog_calendar.glade
 glade/dialog_help_ports.glade
 glade/dialog_image_test.glade
@@ -39,6 +40,7 @@ glade/repetitive_conditions.glade
 glade/report_window.glade
 glade/run_type_add.glade
 glade/session_add_edit.glade
+glade/session_load.glade
 glade/session_upload.glade
 glade/splash_window.glade
 glade/stats_select_sessions.glade
