New Encoder overview mode to see at a glance powers on session

--- a/chronojump.csproj
+++ b/chronojump.csproj
@@ -1004,6 +1004,7 @@
     <Compile Include="src\sqlite\usefulObjects.cs" />
     <Compile Include="src\buildInfo.cs" />
     <Compile Include="src\restTime.cs" />
+    <Compile Include="src\gui\encoderOverview.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
