--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -152,3 +152,5 @@ src/treeViewPerson.cs
 src/treeViewPulse.cs
 src/treeViewReactionTime.cs
 src/treeViewRun.cs
+glade/encoder_overview.glade
+src/gui/encoderOverview.cs
