Updated catalan tranlation

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -154,3 +154,5 @@ src/treeViewReactionTime.cs
 src/treeViewRun.cs
 glade/encoder_overview.glade
 src/gui/encoderOverview.cs
+glade/encoder_overview.glade
+src/gui/encoderOverview.cs
