Updated spanish translate

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -156,3 +156,5 @@ glade/encoder_overview.glade
 src/gui/encoderOverview.cs
 glade/encoder_overview.glade
 src/gui/encoderOverview.cs
+glade/encoder_overview.glade
+src/gui/encoderOverview.cs
